--- a/frontend/src/styles/Profil.css
+++ b/frontend/src/styles/Profil.css
@@ -9,7 +9,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 40% 1fr 20%;
-    gap: 10px;
+    gap: 1%;
 }
 
 .row_1{
@@ -25,6 +25,8 @@
     grid-row: 2;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    
 }
 
 .Profil-avatar{
@@ -32,4 +34,26 @@
     width:120px;
     border-radius: 50%;
     border: solid black 1px;
+    margin-left: 5%;
+}
+
+.Profil-username{
+    margin-left: 5%;
+    margin-top: 8%;
+    font-size: 2rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.Change-Pseudo{
+    margin-left: 5%;
+    height: 1rem;
+    margin-top: 8%;
+}
+
+.Profil-stat{
+    margin:3%;
+    margin-left: 5%;
+    font-size: 1.5rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: justify;
 }
