--- a/frontend/src/styles/Profil.css
+++ b/frontend/src/styles/Profil.css
@@ -8,7 +8,7 @@
     border: solid black 1px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 40% 1fr 20%;
+    grid-template-rows: 40% 1fr 40%;
     gap: 1%;
 }
 
@@ -29,6 +29,20 @@
     
 }
 
+.row_3{
+    grid-column: 1 / 3;
+    grid-row: 3;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.historique{
+    height: 15%;
+    border-radius: 5%;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+
 .Profil-avatar{
     height: 120px;
     width:120px;
@@ -42,12 +56,6 @@
     margin-top: 8%;
     font-size: 2rem;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-.Change-Pseudo{
-    margin-left: 5%;
-    height: 1rem;
-    margin-top: 8%;
 }
 
 .Profil-stat{
