--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -1,16 +1,41 @@
-header{
-    display: flex;
-    justify-content: start;
-    background-color: black;
-    width: auto;
-    height: auto;
+@media screen and (min-width: 800px) {
+    header{
+        display: flex;
+        justify-content: start;
+        background-color: black;
+        width: auto;
+        height: auto;
+    }
+    
+    .Avatar{
+        position: absolute;
+        left: 90%;
+        top: 3%;
+    }
 }
 
-.Avatar{
-    position: absolute;
-    left: 90%;
-    top: 5%;
+@media  screen and (max-width: 800px) {
+    header{
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        background-color: black;
+        width: auto;
+        height: auto;
+    }
+
+    .Avatar{
+        position: absolute;
+        left: 83%;
+        top: 3%;
+    }
 }
+
+
+
+
+
+
 
 .title-header{
     color: white;
