--- a/frontend/src/styles/Profil.css
+++ b/frontend/src/styles/Profil.css
@@ -1,39 +1,35 @@
-.CardProfil{
-    padding-top: 5%;
-    margin: 5%;
+.Container{
+    padding-top: 2%;
+    margin-top: 2%;
+    margin-left: 5%;
     height: auto;
     width: auto;
-    background-color: lightgray;
-    border-radius: 5%;
-    border: solid black 1px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 40% 1fr 40%;
-    gap: 1%;
+    grid-template-areas:
+    "profil friendlist "
+    "stats  friendlist"
+    "historique friendlist";
+    grid-template-columns: 1fr 30%;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 1rem;
 }
 
-.row_1{
-    grid-column: 1 / 3;
-    grid-row: 1;
+.CardProfil{
+    border: 1px solid black;
+}
+
+.profil{
+    grid-area: profil;
     display: flex;
     flex-direction: row;
-
 }
 
-.row_2{
-    grid-column: 1 / 3;
-    grid-row: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    
+.stats{
+    grid-area: stats;   
 }
 
-.row_3{
-    grid-column: 1 / 3;
-    grid-row: 3;
-    display: flex;
-    justify-content: flex-end;
+.historique{
+    grid-area: historique;
 }
 
 .historique{
@@ -42,12 +38,19 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
+.Friend-list{
+    grid-area: friendlist;
+    border: 1px solid black;
+    background-color: aqua;
+}
+
 
 .Profil-avatar{
-    height: 120px;
-    width:120px;
+    height: 60px;
+    width:60px;
     border-radius: 50%;
     border: solid black 1px;
+    margin-top: 5%;
     margin-left: 5%;
 }
 
@@ -58,10 +61,31 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
+.updateProfile{
+    margin-top: 8%;
+    margin-left: 5%;
+    text-decoration: none;
+    background-color: rgb(127, 127, 137);
+    color: white;
+    border-radius: 10%;
+    box-shadow: 10px 5px 5px black;
+}
+
+.updateProfile:hover{
+    background-color: rgb(73, 71, 71);
+}
+
+.list-stat{
+    list-style: none;
+
+
+}
+
 .Profil-stat{
     margin:3%;
     margin-left: 5%;
     font-size: 1.5rem;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: justify;
+    line-height: 10px;
 }
