--- a/frontend/src/styles/Game.css
+++ b/frontend/src/styles/Game.css
@@ -1,4 +1,8 @@
 .canvas{
+    margin-top: 10%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     background-color: black;
     width: 1200px;
     height:800px;
