--- a/frontend/src/styles/Profil.css
+++ b/frontend/src/styles/Profil.css
@@ -71,6 +71,10 @@
     color: white;
     border-radius: 10%;
     box-shadow: 10px 5px 5px black;
+    text-align: center;
+    vertical-align: middle;
+    width: 150px;
+    height: 40px;
 }
 
 .updateProfile:hover{
