--- a/frontend/src/pages/Chat.module.css
+++ b/frontend/src/pages/Chat.module.css
@@ -1,14 +1,94 @@
 .container {
-    display: flex;
-  }
-  
-  .column1 {
-    flex: 1;
-    margin: 10px; /* Adjust margin as needed */
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem;
+  width: 90vw;
+  height: 80vh;
+  min-height: 500px;
+  margin: 0 auto;
+  border-radius: 28px;
+}
 
-  .column2 {
-    flex: 1;
-    margin: 50px; /* Adjust margin as needed */
+@media screen and (max-width: 1200px) {
+  .container {
+      flex-direction: column;
+      min-height: 95rem;
+      max-width: 95vw;
+      padding: 0;
+      background: transparent;
+      box-shadow: none;
   }
-  
+}
+
+
+.column {
+  flex: 1;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 10px solid #000;
+}
+
+.column1 {
+  flex: 0 0 18rem;
+  margin-right: 1rem;
+  height: inherit;
+  border-radius: 10px;
+  border: 1px solid #3a3a42;
+  background: var(--color-black-transparent);
+  opacity: 100;
+  overflow: hidden;
+  scroll-behavior: auto contain;
+  overflow: auto;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.column1::-webkit-scrollbar {
+  /* Chrome */
+  display: none;
+}
+
+@media screen and (max-width: 1200px) {
+  .column1{
+      flex: none;
+      width: 25rem;
+      max-width: 95vw;
+      margin-right: 0;
+      height: 25rem;
+  }
+}
+
+
+.column2 {
+  flex: 1;
+  height: inherit;
+  border-radius: 10px;
+  border: 1px solid #3a3a42;
+  background: var(--color-black-transparent);
+  opacity: 100;
+  scroll-behavior: auto contain;
+  overflow: auto;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.column2::-webkit-scrollbar {
+  /* Chrome */
+  display: none;
+}
+
+@media screen and (max-width: 1200px) {
+  .column2 {
+      flex: none;
+      width: 25rem;
+      max-width: 95vw;
+      height: 40rem;
+      margin: 1rem 0;
+  }
+}
