--- a/frontend/src/styles/Game.css
+++ b/frontend/src/styles/Game.css
@@ -1,12 +1,56 @@
-.canvas
-{
-    margin-top: 10%;
-    display: block;
+.game{
+    margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
-    background-image: url(../assets/background.jpg);
-    background-size: cover;
-    background-position: center;
-    border: 5px solid;
-    border-color: red blue;
+
+    height: auto;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(238, 238, 238, 0.3);
+    box-shadow: 2px 2px 10px rgb(230, 219, 219);
+}
+
+.Title-game{
+    font-family: 'Mario';
+    font-size: 5em;
+    text-align: center;
+    color: aliceblue;
+    text-shadow: 2px 2px 10px rgb(7, 27, 209);
+}
+
+.btn-party{
+    margin-top: 10%;
+    background-color: red;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
+    height: 120px;
+    font-family: Mario;
+    color: whitesmoke;
+    font-size: 1.5rem;
+    text-align: start;
+}
+
+.btn-party:hover + .hidden-text{
+    display: block;
+
+}
+
+.hidden-text{
+    margin: 2%;
+    display: none;
+    text-align: center;
+    align-items: center;
+    font-family: 'Mario';
+    font-size: 1em;
+}
+
+.img-solo{
+    width: 100px;
+    height: 130px;
+    align-items: start;
+    margin-top: -2%;
+    
 }
