--- a/frontend/src/styles/Game.css
+++ b/frontend/src/styles/Game.css
@@ -1,4 +1,4 @@
-.game{
+.pGame .game{
     margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
@@ -11,7 +11,7 @@
     box-shadow: 2px 2px 10px rgb(230, 219, 219);
 }
 
-.Title-game{
+.pGame .Title-game{
     font-family: 'Mario';
     font-size: 5em;
     text-align: center;
@@ -19,7 +19,7 @@
     text-shadow: 2px 2px 10px rgb(7, 27, 209);
 }
 
-.btn-party{
+.pGame .btn-party{
     margin-top: 10%;
     background-color: red;
     border-radius: 10px;
@@ -33,12 +33,12 @@
     text-align: start;
 }
 
-.btn-party:hover + .hidden-text{
+.pGame .btn-party:hover + .hidden-text{
     display: block;
 
 }
 
-.hidden-text{
+.pGame .hidden-text{
     margin: 2%;
     display: none;
     text-align: center;
@@ -47,7 +47,7 @@
     font-size: 1em;
 }
 
-.img-solo{
+.pGame .img-solo{
     width: 100px;
     height: 130px;
     align-items: start;
