--- a/frontend/src/styles/Game.css
+++ b/frontend/src/styles/Game.css
@@ -1,4 +1,5 @@
-.pGame .game{
+.pGame .game
+{
     margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
@@ -11,7 +12,110 @@
     box-shadow: 2px 2px 10px rgb(230, 219, 219);
 }
 
-.pGame .Title-game{
+.pGame .players-display
+{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	margin: 0 auto;
+	width: fit-content;
+}
+
+.pGame .players-icon
+{
+	width: 100px;
+	height: 100px;
+	align-items: start;
+}
+
+.pGame .players-name
+{
+	font-family: 'Mario';
+	font-size: 1.5em;
+	text-align: center;
+}
+
+.pGame .queue
+{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	font-family: 'Mario';
+	font-size: 1.5em;
+	margin: 50px 0px;
+}
+
+.pGame .force-center
+{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.pGame .btn-triggers
+{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+.pGame .btn-triggers button
+{
+	width: 100px;
+	align-items: start;
+	font-family: 'Mario';
+	font-size: 1em;
+	color: red;
+}
+
+.pGame .theme-selection
+{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	margin: 0px auto;
+	width: fit-content;
+}
+
+.pGame .theme-title
+{
+	font-family: 'Courier New', Courier, monospace;
+	font-size: 1.3em;
+	margin: 20px auto 0 auto;
+}
+
+.pGame .theme-selected
+{
+	font-family: 'Courier New', Courier, monospace;
+	font-size: 1.3em;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.pGame .btn-theme
+{
+	width: 150px;
+	height: 50px;
+	align-items: start;
+	font-family: 'Mario';
+	font-size: 1em;
+}
+
+.pGame .gameCanvas
+{
+	width: 30%;
+	margin: 0 auto;
+	background-color: rgba(238, 238, 238, 0.3);
+	box-shadow: 20px 20px 10px rgb(230, 219, 219);
+}
+
+.pGame .Title-game
+{
     font-family: 'Mario';
     font-size: 5em;
     text-align: center;
@@ -19,7 +123,8 @@
     text-shadow: 2px 2px 10px rgb(7, 27, 209);
 }
 
-.pGame .btn-party{
+.pGame .btn-party
+{
     margin-top: 10%;
     background-color: red;
     border-radius: 10px;
@@ -33,12 +138,13 @@
     text-align: start;
 }
 
-.pGame .btn-party:hover + .hidden-text{
+.pGame .btn-party:hover + .hidden-text
+{
     display: block;
-
 }
 
-.pGame .hidden-text{
+.pGame .hidden-text
+{
     margin: 2%;
     display: none;
     text-align: center;
@@ -47,10 +153,10 @@
     font-size: 1em;
 }
 
-.pGame .img-solo{
+.pGame .img-solo
+{
     width: 100px;
     height: 130px;
     align-items: start;
-    margin-top: -2%;
-    
+    margin-top: -2%;    
 }
