--- a/frontend/src/styles/Profil.css
+++ b/frontend/src/styles/Profil.css
@@ -110,3 +110,18 @@
     background-color: rgb(127, 127, 137);
     color: white;
 }
+
+.history-list{
+    margin-top: 2%;
+    padding-bottom: 2px;
+    display: block;
+    text-align: center;
+    height: 500px;
+    scrollbar-width: auto;
+    overflow-y: scroll;
+    border: 1px solid black;
+    margin-left: 10%;
+    margin-right: 10%;
+    box-shadow: 10px 5px 7px black;
+
+}
