--- a/frontend/src/styles/Game.css
+++ b/frontend/src/styles/Game.css
@@ -1,3 +1,9 @@
+.pGame{
+	margin-top: 5%;
+}
+
+
+
 .pGame .game
 {
     margin-top: 5%;
@@ -20,6 +26,7 @@
 	align-items: center;
 	margin: 0 auto;
 	width: fit-content;
+	margin-bottom: 5px;
 }
 
 .pGame .players-icon
@@ -27,6 +34,7 @@
 	width: 100px;
 	height: 100px;
 	align-items: start;
+	border-radius: 50%;
 }
 
 .pGame .players-name
@@ -158,5 +166,5 @@
     width: 100px;
     height: 130px;
     align-items: start;
-    margin-top: -2%;    
+    margin-top: -2%;  
 }
