--- a/frontend/src/styles/HistoryItem.css
+++ b/frontend/src/styles/HistoryItem.css
@@ -3,6 +3,7 @@
     color: black;
     font-family: 'Retro';
     font-size: 1.5rem;
+    border-bottom: solid black 1px;
 }
 
 .link-name{
@@ -12,12 +13,4 @@
 
 .link-name:hover{
     font-weight: bolder;
-}
-
-.victory{
-    color: green;
-}
-
-.defeat{
-    color:red
 }
