--- a/frontend/src/styles/Game.css
+++ b/frontend/src/styles/Game.css
@@ -84,6 +84,7 @@
 {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
 	margin: 0px auto;
