--- a/frontend/src/styles/Profil.css
+++ b/frontend/src/styles/Profil.css
@@ -104,7 +104,7 @@
 }
 
 .button-h {
-    margin-left: 40%;
+    margin-left: 45%;
     border-radius: 10%;
     box-shadow: 10px 5px 5px black;
     text-align: center;
@@ -126,4 +126,9 @@
     margin-right: 10%;
     box-shadow: 10px 5px 7px black;
 
+}
+
+.empty-h{
+    margin-top: 2%;
+    text-align: center;
 }
