--- a/frontend/src/components/Chat/User.module.css
+++ b/frontend/src/components/Chat/User.module.css
@@ -7,6 +7,8 @@
 .left {
     display: flex;
     align-items: center;
+    justify-content: center;
+    font-family: 'Retro';
 }
 .right {
     display: flex;
@@ -64,4 +66,11 @@
     padding-top: 8px;
     padding-bottom: 8px;
     cursor: pointer;
+}
+
+.left img {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    margin-right: 5%;
 }
