add other profil

--- a/frontend/src/components/Chat/User.module.css
+++ b/frontend/src/components/Chat/User.module.css
@@ -30,6 +30,11 @@
     object-fit: cover;
 }
 
+.vprofil{
+    color: black;
+    text-decoration: none;
+}
+
 .user {
     border: 0.2rem solid var(--color-white);
 }
