add styles from page friend

--- a/frontend/src/components/Friends/Friend.module.css
+++ b/frontend/src/components/Friends/Friend.module.css
@@ -4,19 +4,19 @@
 }
 
 .profilePicture {
-    width: var(--size-picture-profile);
-    height: var(--size-picture-profile);
+    width: 100px;
+    height: 100px;
     background-position: center;
     background-size: cover;
-    border: 0.2rem solid var(--color-white);
-    filter: drop-shadow(0px -4px 16px var(--color-black));
+    border: 0.1rem solid black;
+    filter: drop-shadow(0px -2px 4px black);
     border-radius: 50%;
     transform: scale(60%);
 }
 
 .status {
     font-size: 12px;
-    color: var(--color-black-grey);
+    color: black-grey;
 }
 
 .nameAndStatus {
@@ -28,13 +28,20 @@
 .nameAndStatus h3 {
     font-weight: 800;
     font-size: 15px;
-    color: var(--color-white);
+    color: black;
     white-space: nowrap;
 }
 .online {
-    color: var(--color-purple);
+    color: purple;
+    font-weight: bolder;
 }
 
 .playing {
-    color: var(--color-mid-green);
+    color: green;
+    font-weight: bolder;
+}
+
+.offline {
+    color: black;
+    font-weight: bold;
 }
