--- a/frontend/src/styles/Game.css
+++ b/frontend/src/styles/Game.css
@@ -1,7 +1,3 @@
-.pGame{
-	margin-top: 5%;
-}
-
 .pGame .game
 {
     margin-top: 5%;
@@ -89,6 +85,7 @@
 	width: fit-content;
 }
 
+
 .pGame .theme-title
 {
 	font-family: 'Courier New', Courier, monospace;
@@ -132,8 +129,7 @@
 
 .pGame .btn-party
 {
-    margin-top: 10%;
-    background-color: red;
+    margin-top: 10px;
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
@@ -143,6 +139,35 @@
     color: whitesmoke;
     font-size: 1.5rem;
     text-align: start;
+}
+
+.pGame .input-party
+{
+    margin-top: 10px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    height: 40px;
+    font-family: Mario;
+    color: black;
+    font-size: 1.2rem;
+    text-align: start;
+}
+
+.pGame .btn-party#btnA
+{
+    background-color: red;
+}
+
+.pGame .btn-party#btnB
+{
+    background-color: green;
+}
+
+.pGame .btn-party#btnC
+{
+	background-color: goldenrod;
 }
 
 .pGame .btn-party:hover + .hidden-text
@@ -166,4 +191,10 @@
     height: 130px;
     align-items: start;
     margin-top: -2%;  
+}
+
+.pGame .selector
+{
+	display: flex;
+	flex-direction: column;
 }
