Epic Fwend Gameplay

--- a/frontend/src/components/Friends/Friend.module.css
+++ b/frontend/src/components/Friends/Friend.module.css
@@ -45,3 +45,12 @@
     color: black;
     font-weight: bold;
 }
+
+.friendName {
+    text-decoration: none;
+    color: #3a3c42;
+}
+
+.friendName:hover {
+    font-weight: bolder;
+}
